feat: Replace in-memory storage with SQLite database for persistent data

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 # Development Environment Variables
-# Database (commented out - using hardcoded credentials only for testing)
-# DATABASE_URL="postgresql://postgres:password@localhost:5432/supasoka"
-DATABASE_URL=""
+# Database - Using SQLite for local development (no PostgreSQL required)
+DATABASE_URL="file:./dev.db"
 DB_PASSWORD=password
 
 # JWT Secret (generate a strong random string)
