--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "start": "node server.js",
     "start:prod": "NODE_ENV=production node server.js",
     "dev": "nodemon server.js",
+    "setup": "node scripts/setup-sqlite.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "migrate": "npx prisma migrate deploy",
+    "migrate:dev": "npx prisma migrate dev",
     "migrate:prod": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
