--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "migrate:prod": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
-    "build": "npm install && npx prisma generate && npx prisma migrate deploy",
+    "build": "bash scripts/deploy.sh",
+    "render-build": "npm install && npx prisma generate && npx prisma migrate deploy",
     "postinstall": "npx prisma generate",
     "lint": "echo 'No linting configured'",
     "health-check": "curl -f http://localhost:5000/health || exit 1",
