Use prisma db push instead of migrations for Render.com

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "migrate:prod": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
-    "build": "bash scripts/deploy.sh",
-    "render-build": "npm install && npx prisma generate && npx prisma migrate deploy",
+    "build": "npm install && npx prisma generate && npx prisma db push --accept-data-loss",
     "postinstall": "npx prisma generate",
     "lint": "echo 'No linting configured'",
     "health-check": "curl -f http://localhost:5000/health || exit 1",
