--- a/AdminSupa/package.json
+++ b/AdminSupa/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "@types/react": "^19.1.10",
     "axios": "^1.12.2",
     "expo": "~54.0.25",
     "expo-build-properties": "~1.0.9",
@@ -23,14 +24,16 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
-    "socket.io-client": "^4.8.1"
+    "react-native-worklets": "^0.5.1",
+    "socket.io-client": "^4.8.1",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
