--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Supasoka",
+  "name": "supasoka",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.80.1",
-    "expo": "^54.0.25",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/netinfo": "^11.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "react": "19.1.0",
-    "react-native": "0.80.1"
+    "react-native": "0.80.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-mobile-ads": "^16.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-reanimated": "^3.6.0",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video": "^6.0.0-rc.0",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
