--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,6 +116,12 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
+    // Exclude old support library to prevent duplicate classes
+    configurations.all {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
 }
 
 // Add vector icons fonts
