Normalize notification/push stats for AdminSupa compatibility

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,5 +20,8 @@ ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001"
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# CORS Origins
-ALLOWED_ORIGINS="http://localhost:3001,http://localhost:3000"
+# Push Notifications (Pushy)
+PUSHY_API_KEY="your-pushy-api-key-here"
+
+# Notification Scheduling
+NOTIFICATION_SCHEDULE_INTERVAL_MS=30000
