--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^13.0.1",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -39,7 +40,6 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "prisma": "^5.7.1",
-    "pushy": "^4.0.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
