Remove all old notificationService references

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,3 +126,6 @@ dependencies {
 
 // Add vector icons fonts
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
+// Add Google Services plugin for Firebase
+apply plugin: 'com.google.gms.google-services'
