--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,33 +26,16 @@
         android:value="ca-app-pub-5619803043988422~5036677593"
         tools:replace="android:value"/>
       
-      <!-- Push Notification Configuration - REQUIRED for status bar notifications -->
-      <meta-data 
-        android:name="com.dieam.reactnativepushnotification.notification_foreground"
-        android:value="true"/>
-      <meta-data 
-        android:name="com.dieam.reactnativepushnotification.notification_color"
-        android:resource="@color/notification_color"/>
-      <meta-data 
-        android:name="com.dieam.reactnativepushnotification.default_notification_channel_id"
-        android:value="supasoka-high-priority"/>
-      
-      <!-- Push Notification Receivers -->
-      <receiver 
-        android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions"
-        android:exported="true" />
-      <receiver 
-        android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher"
-        android:exported="true" />
-      <receiver 
-        android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
-        android:exported="true">
-        <intent-filter>
-          <action android:name="android.intent.action.BOOT_COMPLETED" />
-          <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-          <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
-        </intent-filter>
-      </receiver>
+      <!-- Firebase Cloud Messaging Configuration -->
+      <meta-data
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@mipmap/ic_launcher" />
+      <meta-data
+        android:name="com.google.firebase.messaging.default_notification_color"
+        android:resource="@color/notification_color" />
+      <meta-data
+        android:name="com.google.firebase.messaging.default_notification_channel_id"
+        android:value="supasoka_notifications" />
       
       <activity
         android:name=".MainActivity"
@@ -67,9 +50,13 @@
         </intent-filter>
       </activity>
       
-      <!-- Headless JS Service for background tasks -->
-      <service 
-        android:name="com.facebook.react.HeadlessJsTaskService"
-        android:exported="false" />
+      <!-- Firebase Cloud Messaging Service -->
+      <service
+        android:name="com.supasoka.FirebaseMessagingService"
+        android:exported="false">
+        <intent-filter>
+          <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+      </service>
     </application>
 </manifest>
