feat: Firebase Cloud Messaging notification system with status bar support
- Migrate from Pushy to Firebase Admin SDK for reliable push notifications
- Implement legacy FCM HTTP fallback for maximum reliability
- Add automatic invalid token cleanup after FCM failures
- Fix Prisma schema compatibility with raw SQL fallback
- Enhance diagnostic endpoint with Firebase initialization status
- Sanitize notification update fields to prevent validation errors
- Update render.yaml with Firebase environment variables
- Add comprehensive deployment guides and release checklists
- Add test scripts: push-config-check, test-send-push, inspect-user
- Ensure status bar notifications visible in all app states (foreground, background, quit)
- Android HIGH priority channel with sound, vibration, badge support

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,10 +32,12 @@
         android:resource="@mipmap/ic_launcher" />
       <meta-data
         android:name="com.google.firebase.messaging.default_notification_color"
-        android:resource="@color/notification_color" />
+        android:resource="@color/notification_color"
+        tools:replace="android:resource" />
       <meta-data
         android:name="com.google.firebase.messaging.default_notification_channel_id"
-        android:value="supasoka_notifications" />
+        android:value="supasoka_notifications"
+        tools:replace="android:value" />
       
       <activity
         android:name=".MainActivity"
@@ -52,7 +54,7 @@
       
       <!-- Firebase Cloud Messaging Service -->
       <service
-        android:name="com.supasoka.FirebaseMessagingService"
+        android:name=".SupasokaFirebaseMessagingService"
         android:exported="false">
         <intent-filter>
           <action android:name="com.google.firebase.MESSAGING_EVENT" />
