--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "node-cron": "^3.0.3",
     "prisma": "^5.7.1",
     "socket.io": "^4.7.4",
+    "supasoka": "file:..",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
