--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:name="com.google.android.gms.ads.APPLICATION_ID"
         android:value="ca-app-pub-5619803043988422~5036677593"
         tools:replace="android:value"/>
-      
+
       <!-- Firebase Cloud Messaging Configuration -->
       <meta-data
         android:name="com.google.firebase.messaging.default_notification_icon"
@@ -38,7 +38,15 @@
         android:name="com.google.firebase.messaging.default_notification_channel_id"
         android:value="supasoka_notifications"
         tools:replace="android:value" />
-      
+
+      <!-- Ensure notifications display with high priority -->
+      <meta-data
+        android:name="com.google.firebase.messaging.notification.importance"
+        android:value="HIGH" />
+      <meta-data
+        android:name="com.google.firebase.messaging.notification.priority"
+        android:value="high" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -51,11 +59,13 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      
+
       <!-- Firebase Cloud Messaging Service -->
       <service
         android:name=".SupasokaFirebaseMessagingService"
-        android:exported="false">
+        android:exported="false"
+        android:enabled="true"
+        android:directBootAware="true">
         <intent-filter>
           <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
